--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,34 @@
 	box-sizing:border-box;
 }
 
+body{
+	background-image: url('../images/wallpaper.jpg');
+	font-family: 'Play', sans-serif;
+}
+
 header{
 	border:red solid 2px;
+	color:white;
+	font-size:36px;
 }
 
 header p{
 	text-align: right;
 	padding-right:50px;
+}
+
+.row{
+	border:white dotted 5px;
+	height:200px;
+}
+
+.whtbx {
+	position:relative;
+	height:100px;
+	width:150px;
+	background:white;
+	text-align: center;
+	border:solid lightgrey 4px;
+	float:left;
+	margin-right:5px;
 }
