--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,15 +18,21 @@ header p{
 	padding-right:50px;
 }
 
+.play{
+	color:black;
+	font-size:24px;
+	font-weight:bold;
+}
+
 .row{
 	border:white dotted 5px;
-	height:200px;
+	height:250px;	
 }
 
 .whtbx {
 	position:relative;
-	height:100px;
-	width:150px;
+	height:200px;
+	width:300px;
 	background:white;
 	text-align: center;
 	border:solid lightgrey 4px;
@@ -34,11 +40,22 @@ header p{
 	margin-right:5px;
 }
 
+@media screen and (max-width: 1250px) {
+
+	.row {
+		height:425px;
+	}
+
+	.play{
+		color:white;
+	}
+
+}
+
 @media screen and (max-width: 635px) {
 
 	.row {
+		height:825px;
+	}
 
-		height:250px;
-	};
-
-};
+}
