--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,13 @@ header p{
 	border:solid lightgrey 4px;
 	float:left;
 	margin-right:5px;
+	font-size:16px;
+	font-weight:normal;
+}
+
+.whtbx:hover{
+	background:lightgrey;
+	border-color:white;
 }
 
 @media screen and (max-width: 1250px) {
